--- a/Site/package.json
+++ b/Site/package.json
@@ -1,61 +1,66 @@
 {
-	"name": "mercurycore",
-	"scripts": {
-		"dev": "vite dev",
-		"build": "vite build",
-		"format": "biome format src --write",
-		"lint": "biome lint src",
-		"prod": "bun i -p && vite build",
-		"preview": "vite preview",
-		"buildview": "vite build && vite preview",
-		"check": "svelte-check --tsconfig ./tsconfig.json",
-		"check:watch": "svelte-check --tsconfig ./tsconfig.json --watch"
-	},
-	"devDependencies": {
-		"@biomejs/biome": "^1.8.3",
-		"@types/bun": "^1.1.8",
-		"@types/d3-interpolate": "^3.0.4",
-		"@types/jsonwebtoken": "^9.0.6",
-		"@types/nprogress": "^0.2.3",
-		"@types/serviceworker": "^0.0.94",
-		"svelte-check": "^3.8.6"
-	},
-	"type": "module",
-	"dependencies": {
-		"@codemirror/commands": "^6.6.0",
-		"@codemirror/lang-css": "^6.2.1",
-		"@codemirror/state": "^6.4.1",
-		"@codemirror/view": "^6.33.0",
-		"@melt-ui/pp": "^0.3.2",
-		"@melt-ui/svelte": "^0.83.0",
-		"@sveltejs/adapter-node": "^5.2.2",
-		"@sveltejs/kit": "^2.5.25",
-		"@sveltejs/vite-plugin-svelte": "^3.1.2",
-		"@unocss/core": "^0.62.3",
-		"@unocss/extractor-svelte": "^0.62.3",
-		"@unocss/preset-tagify": "^0.62.3",
-		"@unocss/transformer-directives": "^0.62.3",
-		"@unocss/transformer-variant-group": "^0.62.3",
-		"codemirror": "^6.0.1",
-		"d3-interpolate": "^3.0.1",
-		"jsonwebtoken": "^9.0.2",
-		"lucia": "^3.2.0",
-		"nprogress": "^0.2.0",
-		"picocolors": "^1.0.1",
-		"profane-words": "^1.5.11",
-		"sharp": "^0.33.5",
-		"surrealdb.js": "^1.0.0-beta.9",
-		"svelte": "^4.2.19",
-		"sveltekit-superforms": "^2.17.0",
-		"typescript": "^5.6.0-dev.20240608",
-		"unocss": "^0.62.3",
-		"vite": "^5.4.2",
-		"zod": "^3.23.8"
-	},
-	"trustedDependencies": [
-		"@biomejs/biome",
-		"@sveltejs/kit",
-		"esbuild",
-		"sharp"
-	]
+  "name": "mercurycore",
+  "scripts": {
+    "dev": "bunx --bun vite dev",
+    "build": "bunx --bun vite build",
+    "format": "biome format src --write",
+    "lint": "biome lint src",
+    "prod": "bun i -p && bunx --bun vite build",
+    "preview": "bunx --bun vite preview",
+    "buildview": "bunx --bun vite build && bunx --bun vite preview",
+    "check": "svelte-check --tsconfig ./tsconfig.json",
+    "check:watch": "svelte-check --tsconfig ./tsconfig.json --watch"
+  },
+  "devDependencies": {
+    "@biomejs/biome": "^1.8.3",
+    "@types/bun": "^1.1.8",
+    "@types/d3-interpolate": "^3.0.4",
+    "@types/jsonwebtoken": "^9.0.6",
+    "@types/nprogress": "^0.2.3",
+    "@types/serviceworker": "^0.0.94",
+    "svelte-check": "^3.8.6"
+  },
+  "type": "module",
+  "dependencies": {
+    "@codemirror/commands": "^6.6.0",
+    "@codemirror/lang-css": "^6.2.1",
+    "@codemirror/state": "^6.4.1",
+    "@codemirror/view": "^6.33.0",
+    "@melt-ui/pp": "^0.3.2",
+    "@melt-ui/svelte": "^0.83.0",
+    "@sveltejs/adapter-node": "^5.2.2",
+    "@sveltejs/kit": "^2.5.25",
+    "@sveltejs/vite-plugin-svelte": "^3.1.2",
+    "@unocss/core": "^0.62.3",
+    "@unocss/extractor-svelte": "^0.62.3",
+    "@unocss/preset-tagify": "^0.62.3",
+    "@unocss/transformer-directives": "^0.62.3",
+    "@unocss/transformer-variant-group": "^0.62.3",
+    "codemirror": "^6.0.1",
+    "d3-interpolate": "^3.0.1",
+    "jsonwebtoken": "^9.0.2",
+    "lucia": "^3.2.0",
+    "nprogress": "^0.2.0",
+    "picocolors": "^1.1.0",
+    "profane-words": "^1.5.11",
+    "sharp": "^0.33.5",
+    "surrealdb.js": "^1.0.0-beta.9",
+    "svelte": "^4.2.19",
+    "svelte-i18n": "^4.0.0",
+    "sveltekit-superforms": "^2.17.0",
+    "typescript": "^5.6.0-dev.20240608",
+    "unocss": "^0.62.3",
+    "vite": "^5.4.2",
+    "zod": "^3.23.8"
+  },
+  "trustedDependencies": [
+    "@biomejs/biome",
+    "@sveltejs/kit",
+    "bufferutil",
+    "es5-ext",
+    "esbuild",
+    "sharp",
+    "svelte-preprocess",
+    "utf-8-validate"
+  ]
 }
